dataset1235/2025-2/1379599236/users/1496892131/executions/2277843042_704983377.log
== RUN (2025-08-16 22:54:52)
-- CODE: 
x = int(input())
y = int(input())

resultado = x//y

resto = x%y

resultado_real = x/y

produto = x*y

potencia = y**3

print(resultado + "\n" + resultado_real + "\n" +resto +"\n" + produto+ "\n" +potenciaotencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(resultado + "\n" + resultado_real + "\n" +resto +"\n" + produto+ "\n" +potenciaotencia)
          ~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for +: 'int' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(resultado + "\n" + resultado_real + "\n" +resto +"\n" + produto+ "\n" +potenciaotencia)
          ~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for +: 'int' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(resultado + "\n" + resultado_real + "\n" +resto +"\n" + produto+ "\n" +potenciaotencia)
          ~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for +: 'int' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(resultado + "\n" + resultado_real + "\n" +resto +"\n" + produto+ "\n" +potenciaotencia)
          ~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for +: 'int' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(resultado + "\n" + resultado_real + "\n" +resto +"\n" + produto+ "\n" +potenciaotencia)
          ~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for +: 'int' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(resultado + "\n" + resultado_real + "\n" +resto +"\n" + produto+ "\n" +potenciaotencia)
          ~~~~~~~~~~^~~~~~
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 22:54:03)
-- CODE: 
x = int(input())
y = int(input())

resultado = x//y

resto = x%y

resultado_real = x/y

produto = x*y

potencia = y**3

print(resultado"\n" resultado_real"\n" resto"\n"produto"\n"potencia)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 14
    print(resultado"\n" resultado_real"\n" resto"\n"produto"\n"potencia)
                   ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 14
    print(resultado"\n" resultado_real"\n" resto"\n"produto"\n"potencia)
                   ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 14
    print(resultado"\n" resultado_real"\n" resto"\n"produto"\n"potencia)
                   ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 14
    print(resultado"\n" resultado_real"\n" resto"\n"produto"\n"potencia)
                   ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 14
    print(resultado"\n" resultado_real"\n" resto"\n"produto"\n"potencia)
                   ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 14
    print(resultado"\n" resultado_real"\n" resto"\n"produto"\n"potencia)
                   ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 22:55:58)
-- CODE: 
x = int(input())
y = int(input())

resultado = x//y

resto = x%y

resultado_real = x/y

produto = x*y

potencia = y**3

print(resultado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
7
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
1
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
2
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
26
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
173
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 22:58:11)
-- CODE: 
x = int(input())
y = int(input())

resultado = x//y

resto = x%y

resultado_real = x/y

produto = x*y

potencia = y**3

print(resultado, resto, resultado_real,produto,potencia, sep="\n")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-16 22:58:19)
-- CODE: 
x = int(input())
y = int(input())

resultado = x//y

resto = x%y

resultado_real = x/y

produto = x*y

potencia = y**3

print(resultado, resto, resultado_real,produto,potencia, sep="\n")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
